--- a/.github/workflows/static_checks.yaml
+++ b/.github/workflows/static_checks.yaml
@@ -30,13 +30,13 @@ jobs:
 
     - name: Create Compilation Database
       run: |
-        cmake --preset ninja-cpuonly-all \
+        cmake --preset develop \
           -DNEOFOAM_DEVEL_TOOLS=OFF \
           -DCMAKE_CXX_COMPILER=clang++-16 \
           -DCMAKE_EXPORT_COMPILE_COMMANDS=ON \
-           -DNEOFOAM_ENABLE_MPI_WITH_THREAD_SUPPORT=OFF \
+          -DNEOFOAM_ENABLE_MPI_WITH_THREAD_SUPPORT=OFF \
           -DNEOFOAM_ENABLE_IWYU=ON
-        cmake --build --preset ninja-cpuonly-all
+        cmake --build --preset develop
     - uses: actions/upload-artifact@v4
       with:
         name: build-artifact
@@ -75,11 +75,11 @@ jobs:
         # Create list of .cpp files that are in this repository and part of the
         # compilation database
         # also filters out " at the begin and end of the filename
-        jq ".[] | .file" build/ReleaseAll/compile_commands.json \
+        jq ".[] | .file" build/develop/compile_commands.json \
           | sed 's/^"\(.*\)"$/\1/' \
           | grep -F -f pattern - > files
         # run clang-tidy on all specified files
-        clang-tidy-16 --fix --extra-arg=-w -p build/ReleaseAll $(cat files)
+        clang-tidy-16 --fix --extra-arg=-w -p build/develop $(cat files)
 
     - name: Check for fixes
       run: |
