Print out avail modules

--- a/.github/workflows/build_on_aws.yml
+++ b/.github/workflows/build_on_aws.yml
@@ -68,6 +68,7 @@ jobs:
         shell: bash -i {0}
         run: |
           export HOME=/share/ec2-user
+          module avail -S clang
           module load clang/16
           module load libfabric-aws
           module load cmake
