--- a/.github/workflows/build_on_aws.yml
+++ b/.github/workflows/build_on_aws.yml
@@ -1,5 +1,7 @@
 name: Compile on AWS
 run-name: Compile on AWS
+env:
+  CTEST_OUTPUT_ON_FAILURE: 1
 on:
   pull_request:
     types: [opened, synchronize]
@@ -75,7 +77,7 @@ jobs:
           cmake --version
           cmake --preset ninja-kokkos-cuda-all \
             -DNEOFOAM_DEVEL_TOOLS=OFF \
-           -DNEOFOAM_ENABLE_MPI_WITH_THREAD_SUPPORT=OFF
+            -DNEOFOAM_ENABLE_MPI_WITH_THREAD_SUPPORT=OFF
           cmake --build --preset ninja-kokkos-cuda-all
       - name: Test NeoFOAM
         shell: bash -i {0}
