use env flags to run mpi as root

--- a/.github/workflows/build_on_aws.yml
+++ b/.github/workflows/build_on_aws.yml
@@ -2,6 +2,8 @@ name: Compile on AWS
 run-name: Compile on AWS
 env:
   CTEST_OUTPUT_ON_FAILURE: 1
+  OMPI_ALLOW_RUN_AS_ROOT: 1
+  OMPI_ALLOW_RUN_AS_ROOT_CONFIRM: 1
 on:
   pull_request:
     types: [opened, synchronize]
