use env flag to oversubscribe

--- a/.github/workflows/build_on_aws.yml
+++ b/.github/workflows/build_on_aws.yml
@@ -4,6 +4,7 @@ env:
   CTEST_OUTPUT_ON_FAILURE: 1
   OMPI_ALLOW_RUN_AS_ROOT: 1
   OMPI_ALLOW_RUN_AS_ROOT_CONFIRM: 1
+  OMPI_MCA_rmaps_base_oversubscribe: true
 on:
   pull_request:
     types: [opened, synchronize]
