--- a/benchmarks/fields/CMakeLists.txt
+++ b/benchmarks/fields/CMakeLists.txt
@@ -4,3 +4,5 @@
 add_executable(bench_fields "bench_fields.cpp")
 
 target_link_libraries(bench_fields PRIVATE Catch2::Catch2 NeoFOAM Kokkos::kokkos)
+set_property(TARGET bench_fields PROPERTY RUNTIME_OUTPUT_DIRECTORY
+                                          ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/benchmarks)
