- pushes before hackathon

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -81,6 +81,7 @@
     "typeindex": "cpp",
     "typeinfo": "cpp",
     "valarray": "cpp",
-    "stacktrace": "cpp"
+    "stacktrace": "cpp",
+    "__nullptr": "cpp"
   }
 }
