--- a/.github/workflows/build_adapter.yaml
+++ b/.github/workflows/build_adapter.yaml
@@ -1,5 +1,5 @@
-name: Build NeoFOAM
-run-name: 'Build workflow'
+name: FoamAdapter Integration Test
+run-name: 'Foam Adapter Integration Test'
 
 on:
   push:
