--- a/.github/workflows/build_adapter.yaml
+++ b/.github/workflows/build_adapter.yaml
@@ -34,6 +34,8 @@ jobs:
     steps:
      - name: Checkout to repository
        uses: actions/checkout@v4
+       with:
+        repository: exasim-project/FoamAdapter
 
      - name: Add repos
        run: |
