- WIP: kokkoskernals implementation

--- a/test/timeIntegration/CMakeLists.txt
+++ b/test/timeIntegration/CMakeLists.txt
@@ -2,5 +2,6 @@
 # SPDX-FileCopyrightText: 2024 NeoFOAM authors
 
 neofoam_unit_test(test_sundials)
-target_link_libraries(test_sundials PRIVATE Catch2::Catch2 NeoFOAM Kokkos::kokkos sundials_cvode
-                                            sundials_nvecserial)
+target_link_libraries(
+  test_sundials PRIVATE Catch2::Catch2 NeoFOAM Kokkos::kokkos Kokkos::kokkoskernels sundials_cvode
+                        sundials_nvecserial)
