--- a/include/CMakeLists.txt
+++ b/include/CMakeLists.txt
@@ -13,6 +13,8 @@ set_property(
   APPEND
   PROPERTY INTERFACE_INCLUDE_DIRECTORIES "${CMAKE_CURRENT_BINARY_DIR}")
 
+target_link_libraries(NeoFOAM_public_api INTERFACE Ginkgo::ginkgo)
+
 if(${CMAKE_BUILD_TYPE} MATCHES Debug)
   target_compile_definitions(NeoFOAM_public_api INTERFACE NF_DEBUG)
 endif()
