--- a/test/core/CMakeLists.txt
+++ b/test/core/CMakeLists.txt
@@ -3,6 +3,7 @@
 
 add_subdirectory(mpi)
 add_subdirectory(primitives)
+add_subdirectory(linearAlgebra)
 
 neofoam_unit_test(dictionary)
 neofoam_unit_test(executor)
