run only if full-ci is requested

--- a/.github/workflows/build_adapter.yaml
+++ b/.github/workflows/build_adapter.yaml
@@ -21,6 +21,7 @@ concurrency:
 
 jobs:
   build:
+    if: ${{contains(github.event.pull_request.labels.*.name, 'full-ci') || github.event_name == 'workflow_dispatch'}}
     name: Build FoamAdapter
     strategy:
       fail-fast: false
