--- a/.github/workflows/build_doc.yaml
+++ b/.github/workflows/build_doc.yaml
@@ -28,6 +28,7 @@ jobs:
         sphinx-build -b html ./doc ./docs_build/
         cd docs_build
         touch .nojekyll
+        cp _build/ docs_build
     - name: Deploy PR Build
       uses: JamesIves/github-pages-deploy-action@v4
       with:
