call doxygen explictly

--- a/.github/workflows/build_doc.yaml
+++ b/.github/workflows/build_doc.yaml
@@ -26,12 +26,9 @@ jobs:
     - name: Build docs
       run: |
         sphinx-build -b html ./doc ./docs_build/
-        doxygen Doxyfile.in
+        find . -name _build
         cd docs_build
         touch .nojekyll
-        ls ..
-        ls .
-        cp ../_build/ docs_build
     - name: Deploy PR Build
       uses: JamesIves/github-pages-deploy-action@v4
       with:
