copy doxygen folder

--- a/.github/workflows/build_doc.yaml
+++ b/.github/workflows/build_doc.yaml
@@ -27,6 +27,7 @@ jobs:
       run: |
         sphinx-build -b html ./doc ./docs_build/
         find . -name _build
+        cp doc/_build/ docs_build/doxygen
         cd docs_build
         touch .nojekyll
     - name: Deploy PR Build
