--- a/.github/workflows/build_doc.yaml
+++ b/.github/workflows/build_doc.yaml
@@ -47,3 +47,6 @@ jobs:
       with:
         folder: docs_build
         target-folder: latest
+    - name: Echo Build PR URL
+      run: |
+        echo "Deploy to: https://exasim-project.com/NeoFOAM/Build_PR_${{ env.PR_NUMBER }}"
