--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -74,4 +74,4 @@ add_subdirectory(core)
 add_subdirectory(fields)
 add_subdirectory(finiteVolume)
 add_subdirectory(mesh)
-add_subdirectory(dsl)
+# add_subdirectory(dsl)
