--- a/test/finiteVolume/cellCentred/timeIntegration/CMakeLists.txt
+++ b/test/finiteVolume/cellCentred/timeIntegration/CMakeLists.txt
@@ -1,4 +1,5 @@
 # SPDX-License-Identifier: Unlicense
 # SPDX-FileCopyrightText: 2024 NeoFOAM authors
 
-neofoam_unit_test(timeIntegration)
+neofoam_unit_test(forwardEuler)
+neofoam_unit_test(sundialsIntergrator)
