--- a/.github/workflows/build_adapter.yaml
+++ b/.github/workflows/build_adapter.yaml
@@ -90,4 +90,5 @@ jobs:
 
      - name: Execute unit tests NeoFOAM
        run: |
+         source /usr/lib/openfoam/openfoam2406/etc/bashrc || true
          ctest --preset develop
