--- a/.github/workflows/build_on_aws.yml
+++ b/.github/workflows/build_on_aws.yml
@@ -75,6 +75,7 @@ jobs:
         uses: actions/checkout@v2
       - name: Set up cache
         uses: actions/cache@v4
+        if: ${{!contains(github.event.pull_request.labels.*.name, 'Skip-cache')}}
         with:
           path: build
           key: aws_PR_${{ github.event.pull_request.number }}_${{matrix.preset}}
