--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -77,6 +77,9 @@
     "typeindex": "cpp",
     "typeinfo": "cpp",
     "valarray": "cpp",
-    "variant": "cpp"
+    "variant": "cpp",
+    "cfenv": "cpp",
+    "*.ipp": "cpp",
+    "locale": "cpp"
   }
 }
