- explicit rk compiles in a degrated state.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -80,6 +80,8 @@
     "variant": "cpp",
     "cfenv": "cpp",
     "*.ipp": "cpp",
-    "locale": "cpp"
+    "locale": "cpp",
+    "strstream": "cpp",
+    "__locale": "cpp"
   }
 }
