- saving ERK implementation, some kind of null point error atm.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
+  "editor.formatOnSave": true,
   "cmake.configureOnOpen": true,
   "files.associations": {
     "numbers": "cpp",
@@ -82,6 +83,8 @@
     "*.ipp": "cpp",
     "locale": "cpp",
     "strstream": "cpp",
-    "__locale": "cpp"
+    "__locale": "cpp",
+    "__config": "cpp",
+    "__nullptr": "cpp"
   }
 }
