--- a/test/finiteVolume/CMakeLists.txt
+++ b/test/finiteVolume/CMakeLists.txt
@@ -3,4 +3,5 @@
 
 add_subdirectory(cellCentred/fields)
 add_subdirectory(cellCentred/boundary)
+add_subdirectory(cellCentred/operator)
 add_subdirectory(cellCentred/timeIntegration)
