--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -13,6 +13,31 @@ add_subdirectory(catch2)
 # * WORKING_DIRECTORY: the working directory for the test, defaults to CMAKE_BINARY_DIR/bin
 function(neofoam_unit_test TEST)
   set(options "")
+  set(oneValueKeywords "COMMAND" "WORKING_DIRECTORY")
+  set(multiValueKeywords "")
+  cmake_parse_arguments("neofoam" "${options}" "${oneValueKeywords}" "${multiValueKeywords}"
+                        ${ARGN})
+  if(NOT DEFINED "neofoam_WORKING_DIRECTORY")
+    set(neofoam_WORKING_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/tests)
+  endif()
+  if(NOT DEFINED "neofoam_COMMAND")
+    set(neofoam_COMMAND ${TEST})
+  endif()
+
+  add_executable(${TEST} "${TEST}.cpp")
+  target_link_libraries(${TEST} PRIVATE neofoam_catch_main neofoam_warnings neofoam_options
+                                        Kokkos::kokkos NeoFOAM cpptrace::cpptrace)
+  set_target_properties(${TEST} PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${neofoam_WORKING_DIRECTORY})
+
+  add_test(
+    NAME ${TEST}
+    COMMAND ${neofoam_COMMAND}
+    WORKING_DIRECTORY ${neofoam_WORKING_DIRECTORY})
+
+endfunction()
+
+function(neofoam_unit_test_mpi TEST)
+  set(options "")
   set(oneValueKeywords "MPI_SIZE" "COMMAND" "WORKING_DIRECTORY")
   set(multiValueKeywords "")
   cmake_parse_arguments("neofoam" "${options}" "${oneValueKeywords}" "${multiValueKeywords}"
@@ -21,14 +46,14 @@ function(neofoam_unit_test TEST)
     set(neofoam_MPI_SIZE 1)
   endif()
   if(NOT DEFINED "neofoam_WORKING_DIRECTORY")
-    set(neofoam_WORKING_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/bin/tests)
+    set(neofoam_WORKING_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/tests)
   endif()
   if(NOT DEFINED "neofoam_COMMAND")
     set(neofoam_COMMAND ${TEST})
   endif()
 
   add_executable(${TEST} "${TEST}.cpp")
-  target_link_libraries(${TEST} PRIVATE neofoam_catch_main neofoam_warnings neofoam_options
+  target_link_libraries(${TEST} PRIVATE neofoam_catch_main_mpi neofoam_warnings neofoam_options
                                         Kokkos::kokkos NeoFOAM cpptrace::cpptrace)
   set_target_properties(${TEST} PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${neofoam_WORKING_DIRECTORY})
 
