--- a/.github/workflows/build_doc.yaml
+++ b/.github/workflows/build_doc.yaml
@@ -21,6 +21,7 @@ jobs:
         && pip3 install furo
         && pip3 install breathe
         && pip3 install sphinx-sitemap
+        && pip3 install sphinxcontrib-mermaid
     - name: Checkout repo
       uses: actions/checkout@v4
     - name: Build docs
