--- a/test/core/CMakeLists.txt
+++ b/test/core/CMakeLists.txt
@@ -10,9 +10,13 @@ neofoam_unit_test(parallelAlgorithms)
 
 # The registerClass test has to be created without linking against neofoam. Otherwise, it will pick
 # up the factories registered in neofoam, which will make the test hard to maintain.
+add_library(testRegister SHARED)
+target_sources(testRegister  PRIVATE "testRegister.cpp")
+target_link_libraries(testRegister PRIVATE NeoFOAM_public_api cpptrace::cpptrace)
+
 add_executable(registerClass "registerClass.cpp")
 target_link_libraries(registerClass PRIVATE Catch2::Catch2WithMain cpptrace::cpptrace MPI::MPI_CXX
-                                            NeoFOAM_public_api)
+                                            NeoFOAM_public_api testRegister)
 add_test(
   NAME registerClass
   COMMAND registerClass
