added ldd linker to workflows

--- a/.github/workflows/static_checks.yaml
+++ b/.github/workflows/static_checks.yaml
@@ -25,6 +25,7 @@ jobs:
            ninja-build \
            iwyu \
            clang-16 \
+           lld \
            libomp-16-dev \
            libopenmpi-dev \
            openmpi-bin
