--- a/.github/workflows/build_adapter.yaml
+++ b/.github/workflows/build_adapter.yaml
@@ -59,6 +59,7 @@ jobs:
            ninja-build \
            clang-16 \
            gcc-10 \
+           lld \
            libomp-16-dev \
            python3 \
            python3-dev \
