moved fieldDataBase and EntityManager into fvcc

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -15,7 +15,6 @@ target_sources(
           "core/demangle.cpp"
           "core/tokenList.cpp"
           "core/kokkos.cpp"
-          "fields/fieldDatabase.cpp"
           "executor/CPUExecutor.cpp"
           "executor/GPUExecutor.cpp"
           "executor/serialExecutor.cpp"
@@ -26,6 +25,8 @@ target_sources(
           "finiteVolume/cellCentred/stencil/stencilDataBase.cpp"
           "finiteVolume/cellCentred/stencil/geometryScheme.cpp"
           "finiteVolume/cellCentred/stencil/basicGeometryScheme.cpp"
+          "finiteVolume/cellCentred/fieldDatabase.cpp"
+          "finiteVolume/cellCentred/fieldEntityManager.cpp"
           "finiteVolume/cellCentred/boundary/boundary.cpp"
           "finiteVolume/cellCentred/operators/gaussGreenGrad.cpp"
           "finiteVolume/cellCentred/operators/gaussGreenDiv.cpp"
