--- a/.github/workflows/static_checks.yaml
+++ b/.github/workflows/static_checks.yaml
@@ -32,6 +32,7 @@ jobs:
     - name: Set up cache
       uses: actions/cache@v4
       with:
+        if: ${{!contains(github.event.pull_request.labels.*.name, 'Skip-cache')}}
         path: build
         key: static_PR_${{ github.event.pull_request.number }}
 
