--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -25,6 +25,9 @@ function(neofoam_unit_test TEST)
   endif()
 
   add_executable(${TEST} "${TEST}.cpp")
+  if(Kokkos_ENABLE_CUDA)
+    set_source_files_properties("${TEST}.cpp" PROPERTIES LANGUAGE CUDA)
+  endif()
   target_link_libraries(${TEST} PRIVATE neofoam_catch_main neofoam_warnings neofoam_options
                                         Kokkos::kokkos NeoFOAM cpptrace::cpptrace)
   set_target_properties(${TEST} PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${neofoam_WORKING_DIRECTORY})
@@ -53,6 +56,9 @@ function(neofoam_unit_test_mpi TEST)
   endif()
 
   add_executable(${TEST} "${TEST}.cpp")
+  if(Kokkos_ENABLE_CUDA)
+    set_source_files_properties("${TEST}.cpp" PROPERTIES LANGUAGE CUDA)
+  endif()
   target_link_libraries(${TEST} PRIVATE neofoam_catch_main_mpi neofoam_warnings neofoam_options
                                         Kokkos::kokkos NeoFOAM cpptrace::cpptrace)
   set_target_properties(${TEST} PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${neofoam_WORKING_DIRECTORY})
