--- a/test/core/CMakeLists.txt
+++ b/test/core/CMakeLists.txt
@@ -13,8 +13,17 @@ neofoam_unit_test(parallelAlgorithms)
 # The registerClass test has to be created without linking against neofoam. Otherwise, it will pick
 # up the factories registered in neofoam, which will make the test hard to maintain.
 add_executable(registerClass "registerClass.cpp")
-target_link_libraries(registerClass PRIVATE Catch2::Catch2WithMain cpptrace::cpptrace MPI::MPI_CXX
-                                            NeoFOAM_public_api)
+if(Kokkos_ENABLE_CUDA)
+  set_source_files_properties("registerClass.cpp" PROPERTIES LANGUAGE CUDA)
+endif()
+target_link_libraries(registerClass 
+  PRIVATE 
+  Catch2::Catch2WithMain 
+  cpptrace::cpptrace
+  MPI::MPI_C 
+  MPI::MPI_CXX
+  NeoFOAM_public_api
+)
 add_test(
   NAME registerClass
   COMMAND registerClass
