--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -7,29 +7,28 @@ add_library(NeoFOAM SHARED)
 include(GNUInstallDirs)
 
 set(NeoFOAM_SRCS
-  "core/mpi/halfDuplexCommBuffer.cpp"
-  "core/primitives/vector.cpp"
-  "core/time.cpp"
-  "core/dictionary.cpp"
-  "core/demangle.cpp"
-  "core/tokenList.cpp"
-  "core/kokkos.cpp"
-  "executor/CPUExecutor.cpp"
-  "executor/GPUExecutor.cpp"
-  "executor/serialExecutor.cpp"
-  "mesh/unstructured/boundaryMesh.cpp"
-  "mesh/unstructured/communicator.cpp"
-  "mesh/unstructured/unstructuredMesh.cpp"
-  "finiteVolume/cellCentred/stencil/stencilDataBase.cpp"
-  "finiteVolume/cellCentred/stencil/stencilDataBase.cpp"
-  "finiteVolume/cellCentred/stencil/geometryScheme.cpp"
-  "finiteVolume/cellCentred/stencil/basicGeometryScheme.cpp"
-  "finiteVolume/cellCentred/boundary/boundary.cpp"
-  "finiteVolume/cellCentred/operators/gaussGreenGrad.cpp"
-  "finiteVolume/cellCentred/operators/gaussGreenDiv.cpp"
-  "finiteVolume/cellCentred/interpolation/linear.cpp"
-  "finiteVolume/cellCentred/interpolation/upwind.cpp"
-)
+    "core/mpi/halfDuplexCommBuffer.cpp"
+    "core/primitives/vector.cpp"
+    "core/time.cpp"
+    "core/dictionary.cpp"
+    "core/demangle.cpp"
+    "core/tokenList.cpp"
+    "core/kokkos.cpp"
+    "executor/CPUExecutor.cpp"
+    "executor/GPUExecutor.cpp"
+    "executor/serialExecutor.cpp"
+    "mesh/unstructured/boundaryMesh.cpp"
+    "mesh/unstructured/communicator.cpp"
+    "mesh/unstructured/unstructuredMesh.cpp"
+    "finiteVolume/cellCentred/stencil/stencilDataBase.cpp"
+    "finiteVolume/cellCentred/stencil/stencilDataBase.cpp"
+    "finiteVolume/cellCentred/stencil/geometryScheme.cpp"
+    "finiteVolume/cellCentred/stencil/basicGeometryScheme.cpp"
+    "finiteVolume/cellCentred/boundary/boundary.cpp"
+    "finiteVolume/cellCentred/operators/gaussGreenGrad.cpp"
+    "finiteVolume/cellCentred/operators/gaussGreenDiv.cpp"
+    "finiteVolume/cellCentred/interpolation/linear.cpp"
+    "finiteVolume/cellCentred/interpolation/upwind.cpp")
 
 target_sources(NeoFOAM PRIVATE ${NeoFOAM_SRCS})
 if(Kokkos_ENABLE_CUDA)
@@ -42,4 +41,5 @@ enable_sanitizers(
   NEOFOAM_ENABLE_SANITIZE_THREAD NEOFOAM_ENABLE_SANITIZE_MEMORY)
 
 target_link_libraries(NeoFOAM PRIVATE neofoam_warnings neofoam_options)
-target_link_libraries(NeoFOAM PUBLIC NeoFOAM_public_api MPI::MPI_C MPI::MPI_CXX Kokkos::kokkos cpptrace::cpptrace)
+target_link_libraries(NeoFOAM PUBLIC NeoFOAM_public_api MPI::MPI_C MPI::MPI_CXX Kokkos::kokkos
+                                     cpptrace::cpptrace)
