Build without mpi

--- a/test/mesh/unstructured/CMakeLists.txt
+++ b/test/mesh/unstructured/CMakeLists.txt
@@ -1,5 +1,8 @@
 # SPDX-License-Identifier: Unlicense
 # SPDX-FileCopyrightText: 2023-2024 NeoFOAM authors
 
-neofoam_unit_test_mpi(communicator MPI_SIZE 3)
+if(NEOFOAM_ENABLE_MPI_SUPPORT)
+  neofoam_unit_test_mpi(communicator MPI_SIZE 3)
+endif()
+
 neofoam_unit_test(unstructuredMesh)
