rename input/add further operator tests

--- a/test/core/CMakeLists.txt
+++ b/test/core/CMakeLists.txt
@@ -9,7 +9,7 @@ add_subdirectory(primitives)
 
 neofoam_unit_test(dictionary)
 neofoam_unit_test(tokenList)
-neofoam_unit_test(inputs)
+neofoam_unit_test(input)
 neofoam_unit_test(executor)
 neofoam_unit_test(parallelAlgorithms)
 
