--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -15,7 +15,7 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-  windows_mingw:
+  windows_msvc:
     if: ${{!contains(github.event.pull_request.labels.*.name, 'Skip-build')}}
     name: mingw/${{ matrix.config.name }}
     runs-on: [windows-latest]
